--- a/Data/env/Project.toml
+++ b/Data/env/Project.toml
@@ -2,3 +2,4 @@
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
